# acidwarp-linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  acidwarp.desktop
snap/: snapcraft.yaml
